--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-recaptcha": "^1.0.5",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-contentful": "^4.4.0",
@@ -27,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-particles-js": "^3.4.1",
+    "react-recaptcha": "^2.3.10",
     "react-slick": "^0.27.14",
     "sass": "^1.32.4",
     "slick-carousel": "^1.8.1"
